2005-08-07  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-resize.c (gimp_image_resize_with_layers):
	take care of sample points. Addresses bug #137776.

2005-08-07  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: made variables more local to make the code
	easier to read and to optimize.

2005-08-07  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer.[ch] (gimp_layer_flatten): new function.

	* app/actions/layers-actions.c
	* app/actions/layers-commands.[ch]
	* app/widgets/gimphelp-ids.h
	* menus/image-menu.xml.in
	* menus/layers-menu.xml: added "Remove Alpha Channel" action,
	action callback, help ID and menu items. Fixes bug #309762.

2005-08-07  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: micro optimizations.

2005-08-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c: do not restart draw tool
	unless shell->proximity.

2005-08-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselecttool.c
	(gimp_foreground_select_tool_draw): show the extents of the working
	area if the user moves the mouse out of it. Is this useful?

	* app/tools/gimpforegroundselectoptions.c: removed colons from labels.

2005-08-06  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpforegroundselectoptions.c: increased default brush
	size and upper limit.

	* app/tools/gimpforegroundselecttool.c: draw a brush outline.

2005-08-06  Manish Singh  <yosh@gimp.org>

	* plug-ins/Makefile.am: remove dbbrowser from SUBDIRS.

2005-08-06  Manish Singh  <yosh@gimp.org>

	* plug-ins/dbbrowser/plugin-browser.c
	* plug-ins/dbbrowser/procedure-browser.c: removed these files...
	
	* plug-ins/common/plugin-browser.c
	* plug-ins/common/procedure-browser.c: ...and added them here.

	* plug-ins/common/mkgen.pl: transform - to _ in makefile variable
	names, and attach optional CFLAGS to only the plugins that need
	them.

	* plug-ins/common/plugin-defs.pl: added plugin-browser and
	procedure-browser, and changed poppler, svg, and wmf to use the new